Fixed Question design for box-shadow and feedback colors. Adjusted feedback icon look and position for text. Hide overflow-x to prevent tiny horizontal scrollbar. HFJ-829

--- a/css/dragquestion.css
+++ b/css/dragquestion.css
@@ -3,8 +3,11 @@
   background: #fff;
 }
 
-html.h5p-iframe .h5p-container.h5p-dragquestion.h5p-fullscreen {
+html.h5p-iframe .h5p-container.h5p-dragquestion.h5p-fullscreen,
+.h5p-interactive-video .h5p-frame.h5p-dragquestion,
+.h5p-interactive-video .h5p-dialog[data-lib="H5P.DragQuestion"] .h5p-dialog-inner {
   overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .h5p-dragquestion p {
@@ -63,7 +66,7 @@ html.h5p-iframe .h5p-container.h5p-dragquestion.h5p-fullscreen {
   background: -webkit-linear-gradient(to bottom, rgb(255,255,255) 0%, rgb(224,224,224) 100%);
   background: linear-gradient(to bottom, rgb(255,255,255) 0%, rgb(224,224,224) 100%);
 
-  box-shadow: 0em 0em 0.4em rgba(0,0,0,0.5);
+  box-shadow: 0 0 0.3em rgba(0,0,0,0.2);
   z-index: 3;
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -96,7 +99,7 @@ html.h5p-iframe .h5p-container.h5p-dragquestion.h5p-fullscreen {
 }
 .h5p-dragquestion .h5p-draggable.ui-draggable-dragging {
   opacity: 0.5;
-  box-shadow: 0em 0em 0.8em rgba(0,0,0,0.5);
+  box-shadow: 0 0 0.3em rgba(0,0,0,0.2);
 }
 .h5p-dragquestion .h5p-draggable.ui-state-disabled {
   opacity: 1;
@@ -111,20 +114,20 @@ html.h5p-iframe .h5p-container.h5p-dragquestion.h5p-fullscreen {
 }
 
 .h5p-dragquestion .h5p-dropped.h5p-correct, .h5p-dragquestion .h5p-dropzone.h5p-correct-answer {
-  color: #39692e;
-  border: 0.1em solid #afcdaa;
+  color: #255c41;
+  border: 0.1em solid #9dd8bb;
   box-shadow: none;
-  background: rgb(209,226,206);
-  background: -webkit-linear-gradient(to bottom, rgb(209,226,206) 0%, rgb(209,226,206) 100%);
-  background: linear-gradient(to bottom, rgb(209,226,206) 0%, rgb(209,226,206) 100%);
+  background: #9dd8bb;
+  background: -webkit-linear-gradient(to bottom, #9dd8bb 0%, #9dd8bb 100%);
+  background: linear-gradient(to bottom, #9dd8bb 0%, #9dd8bb 100%);
 }
 
 .h5p-dragquestion .h5p-dropped.h5p-wrong {
-  border: 0.1em solid #ce9b9b;
-  color: #c33f62;
-  background: rgb(230,206,209);
-  background: -webkit-linear-gradient(to bottom, rgb(230,206,209) 0%, rgb(230,206,209) 100%);
-  background: linear-gradient(to bottom, rgb(230,206,209) 0%, rgb(230,206,209) 100%);
+  border: 0.1em solid #f7d0d0;
+  color: #b71c1c;
+  background: #f7d0d0;
+  background: -webkit-linear-gradient(to bottom, #f7d0d0 0%, #f7d0d0 100%);
+  background: linear-gradient(to bottom, #f7d0d0 0%, #f7d0d0 100%);
 }
 .h5p-dragquestion .h5p-dropped.h5p-wrong, .h5p-dragquestion .h5p-dropped.h5p-correct {
   text-align: left;
@@ -133,7 +136,8 @@ html.h5p-iframe .h5p-container.h5p-dragquestion.h5p-fullscreen {
   padding-bottom: 0.4em;
 }
 
-.h5p-dragquestion .h5p-draggable.h5p-correct:after, .h5p-dragquestion .h5p-draggable.h5p-wrong:after {
+.h5p-dragquestion .h5p-draggable.h5p-correct:after,
+.h5p-dragquestion .h5p-draggable.h5p-wrong:after {
   font-family: 'H5PFontAwesome4';
   font-size: 1em;
   font-weight: normal;
@@ -142,6 +146,14 @@ html.h5p-iframe .h5p-container.h5p-dragquestion.h5p-fullscreen {
   top: 0.1em;
   padding: 0 0.2em;
   background: inherit;
+  -webkit-border-radius: 0.25em;
+  -moz-border-radius: 0.25em;
+  border-radius: 0.25em;
+}
+
+/* Align feedback to text */
+.h5p-dragquestion .h5p-draggable.h5p-advanced-text:after {
+  line-height: 1.75;
 }
 
 .h5p-dragquestion .h5p-draggable.h5p-correct.h5p-advanced-text:after, .h5p-dragquestion .h5p-draggable.h5p-wrong.h5p-advanced-text:after {
